Github Actions CI & Publishing